deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppet-enc
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: puppet-enc
  template:
    metadata:
      labels:
        app: puppet-enc
    spec:
      containers:
        - name: enc
          image: ncsa/puppet-enc
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /enc/healthz
              port: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-enc
---
apiVersion: v1
kind: Service
metadata:
  name: puppet-enc
spec:
  ports:
  - name: http
    targetPort: http
    port: 8080
  selector:
    app: puppet-enc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puppet-enc
spec:
  tls:
  - secretName: puppet.example.com
  rules:
  - host: puppet.example.com
    http:
      paths:
      - path: /enc/
        pathType: ImplementationSpecific
        backend:
          service:
            name: puppet-enc
            port:
              number: 8080
